feat: move default model into user settings
